# modtranpy

./: .gitignore  README.md  pyproject.toml
modtran_tud/: __init__.py  io_utils.py  plotting.py  rtm_simple.py
modtran_tud.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modtran_tud/templates/: tape5_template_down  tape5_template_standoff  tape5_template_standoff_D  tape5_template_up
scripts/: T300_H1p0_O1p0.npz  example_run_Standoff.py  example_run_TUD.py
