[project]
name = "modtran_tud"
version = "0.1.0"
description = "Python wrapper around MODTRAN 5 to compute TUD (Transmittance, Upwelling, Downwelling) for thermal bands."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jeferson", email = jefersonacevedo08@gmail.com" }
]
dependencies = [
  "numpy",
  "pandas"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modtran_tud"]

[tool.setuptools.package-data]
modtran_tud = ["templates/*"]
